task-5-dataverse/test/example/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: application
spec:
  rules:
    - host: dv.ct.gdcc.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dataverse
                port:
                  name: http
