task-5-dataverse/test/example/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: dataverse
  labels:
    # Let's not enforce PSP restricted just yet, makes it easier for the workshop learning curve.
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
